# Arbos

./: .gitignore  PROMPT.md  README.md  arbos.py  install.sh  pyproject.toml  run.sh
arbos/: CLAUDE.md  __init__.py  __main__.py  bot.py  cli.py  config.py  discord_api.py  env.py  goals.py  log.py  main.py  openclaw_client.py  prompt.py  proxy.py  redact.py  runner.py  state.py
hooks/: common.sh
scripts/: ov_memory.py
skills/memory-recall/: SKILL.md
tools/: lium_mnist_smoke.py  pause.py  send_telegram.py
tools/inference_subnet/: hardened_scoring.py
