[project]
name = "arbos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "discord.py>=2.3",
    "httpx",
    "fastapi",
    "uvicorn",
    "cryptography",
]

[tool.setuptools]
py-modules = ["arbos"]
